# primer-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run_ci_checks.sh  sample.env
.cursor/skills/fastapi-python-guidelines/: SKILL.md
.cursor/skills/nextjs-cloud-run-deploy/: SKILL.md
.cursor/skills/nextjs-frontend-guidelines/: SKILL.md
.cursor/skills/python-function-reflection/: SKILL.md
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
app/: main.py
app/agents/: main.py
app/agents/graph/: workflow.py
app/agents/graph/nodes/: __init__.py  company_resolver.py  evidence_classifier.py  evidence_extractor.py  evidence_selector.py  public_source_searcher.py  research_synthesizer.py  search_planner.py  source_ranker.py
app/agents/graph/prompts/: evidence_classifier.md  evidence_extractor.md  evidence_selector.md  research_followup.md  research_synthesizer.md  source_ranker.md
app/agents/graph/state_models/: evidence_model.py  nodes_research_state.py  research_state.py  source_model.py
app/agents/services/: llm_service.py  prompt_llm_service.py  web_search_service.py
app/api/: router.py
app/api/routes/: health.py  meta.py  research.py
app/api/schemas/: research.py  signal.py
app/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  vitest.config.ts
app/observability/: tracing.py
evals/: README.md  __init__.py
evals/agents/: run_research_eval.py
evals/datasets/: signals_analyze_golden_v1.json
scripts/: download_mag7_quarterly_docs.py  download_missing_mag7_pdfs.py
tests/: conftest.py
tests/agents/unit/: test_langgraph_workflow_unit.py  test_research_report_quality_unit.py
tests/api/e2e/: test_api_smoke_e2e.py
tests/api/integration/: test_router_integration.py
tests/api/unit/: test_main_unit.py  test_research_usage_unit.py
(+22 files in other folders)
